# uab

./: .gitignore  README.md  pyproject.toml
examples/houdini/: uab.json
examples/maya/: README.md  uab.mod  (+1 more)
src/uab/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  runner.py
src/uab/backend/: asset_service.py  server.py
src/uab/backend/app/api/: routes.py  schemas.py
src/uab/backend/app/data_access/: models.py
src/uab/core/: __init__.py  assets.py  base_presenter.py  composites.py  config.py  database.py  desktop_presenter.py  houdini_presenter.py  interfaces.py  models.py  preferences.py  schemas.py  thumbnails.py  tree_sections.py  utils.py
src/uab/core/plugins/: asset_library_plugin.py  base_plugin.py
src/uab/frontend/: browser.py  detail.py  main_widget.py  main_window.py  thumbnail.py
src/uab/integrations/: __init__.py  standalone.py
src/uab/integrations/houdini/: __init__.py  _hou.py  integration.py
src/uab/integrations/houdini/strategies/: __init__.py  arnold.py  base.py  karma.py  redshift.py
src/uab/integrations/maya/: __init__.py  _maya.py  integration.py
src/uab/integrations/maya/strategies/: __init__.py  arnold.py  base.py
src/uab/plugins/: __init__.py  base.py  local.py  mock.py  polyhaven.py
src/uab/presenters/: __init__.py  main_presenter.py  tab_presenter.py
src/uab/ui/: __init__.py  browser.py  composite_tree.py  delegates.py  main_widget.py  main_window.py  settings_tab.py  status_bar.py  styles.qss  utils.py
tests/: conftest.py  test_asset.py  test_browsable.py  test_composite_asset.py  test_database.py  test_import_flow.py  test_integration_flow.py  test_interfaces.py  test_main_presenter.py  test_maya_integration_importability.py  test_models.py  test_plugins.py  test_polyhaven_expand_local_status.py  test_preferences.py  test_schema.py  test_tab_presenter.py  test_thumbnails.py  test_tree_sections.py
(+2 files in other folders)
