[project]
name = "uab"
version = "0.1.0"
description = "Universal Asset Browser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { uab = "." }
packages = ["uab", "uab.core", "uab.ui"]
