[project]
name = "uab"
version = "0.1.0"
description = "Universal Asset Browser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.10.1",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "openexr>=3.2.0",
    "imageio>=2.31.0",
    "imath>=0.0.2",
    "opencv-python>=4.11.0.86",
    "aiohttp>=3.9.0",
    "certifi>=2023.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { uab = "." }
packages = ["uab", "uab.core", "uab.ui", "uab.plugins", "uab.presenters", "uab.integrations"]
include-package-data = true

[tool.setuptools.package-data]
uab = ["assets/*", "ui/*.qss"]
